implement arithmetic expression compiler by antlr4

--- a/arithmetic-expression-compiler-java-antlr4/pom.xml
+++ b/arithmetic-expression-compiler-java-antlr4/pom.xml
@@ -19,6 +19,40 @@
             <artifactId>antlr4</artifactId>
             <version>4.10.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4-maven-plugin</artifactId>
+            <version>4.10.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.antlr</groupId>
+                <artifactId>antlr4-maven-plugin</artifactId>
+                <version>4.10.1</version>
+                <executions>
+                    <execution>
+                        <id>antlr</id>
+                        <goals>
+                            <goal>antlr4</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <outputDirectory>src/main/java/org/streamlet/arithmetic/expression/compiler/antlr4/generated</outputDirectory>
+                    <arguments>
+                        <argument>-package</argument>
+                        <argument>org.streamlet.arithmetic.expression.compiler.antlr4.generated</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
