implement arithmetic expression compiler by antlr3

--- a/arithmetic-expression-compiler-java-antlr3/pom.xml
+++ b/arithmetic-expression-compiler-java-antlr3/pom.xml
@@ -19,5 +19,33 @@
             <artifactId>antlr</artifactId>
             <version>3.5.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.antlr</groupId>
+                <artifactId>antlr3-maven-plugin</artifactId>
+                <version>3.5.3</version>
+                <executions>
+                    <execution>
+                        <id>antlr</id>
+                        <goals>
+                            <goal>antlr</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <outputDirectory>src/main/java/org/streamlet/arithmetic/expression/compiler/antlr3/generated</outputDirectory>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
