--- a/arithmetic-expression-compiler-java-javacc/pom.xml
+++ b/arithmetic-expression-compiler-java-javacc/pom.xml
@@ -4,6 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.streamlet</groupId>
+        <artifactId>arithmetic-expression-compiler-java</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <groupId>org.streamlet</groupId>
     <artifactId>arithmetic-expression-compiler-java-javacc</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -14,6 +20,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.streamlet</groupId>
+            <artifactId>arithmetic-expression-compiler-java-shared</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>net.java.dev.javacc</groupId>
             <artifactId>javacc</artifactId>
