--- a/arithmetic-expression-compiler-shared/pom.xml
+++ b/arithmetic-expression-compiler-shared/pom.xml
@@ -4,21 +4,28 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.streamlet</groupId>
+        <artifactId>arithmetic-expression-compiler-java</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <groupId>org.streamlet</groupId>
-    <artifactId>arithmetic-expression-compiler-java</artifactId>
+    <artifactId>arithmetic-expression-compiler-java-shared</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
-    <modules>
-        <module>arithmetic-expression-compiler-shared</module>
-        <module>arithmetic-expression-compiler-java-javacc</module>
-        <module>arithmetic-expression-compiler-java-antlr3</module>
-        <module>arithmetic-expression-compiler-java-antlr4</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 </project>
