--- a/arithmetic-expression-compiler-java-antlr4/pom.xml
+++ b/arithmetic-expression-compiler-java-antlr4/pom.xml
@@ -52,12 +52,27 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <outputDirectory>src/main/java/org/streamlet/arithmetic/expression/compiler/antlr4/generated</outputDirectory>
-                    <arguments>
-                        <argument>-package</argument>
-                        <argument>org.streamlet.arithmetic.expression.compiler.antlr4.generated</argument>
-                    </arguments>
+                    <outputDirectory>${basedir}/target/generated-sources/antlr4/org/streamlet/arithmetic/expression/compiler/antlr4</outputDirectory>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>3.3.0</version>
+                <executions>
+                    <execution>
+                        <id>add-source</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${basedir}/target/generated-sources</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
